Wording on parameters explanation

--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                             <div class="col-md-1"></div>
                             <div class="col-md-10">
                                 <h4>Parameters</h4>
-                                <p>You can add your own <a href="https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/parameters-section-structure.html" target="_blank">CloudFormation stack parameters</a> by adding them below. If the default value is set, <code>!Ref</code> or <code>!Sub</code> may be used to reference these parameters in the output if the values match.</p>
+                                <p>You can optionally add your own <a href="https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/parameters-section-structure.html" target="_blank">CloudFormation stack parameters</a> by adding them below. If the default value is set, <code>!Ref</code> or <code>!Sub</code> may be used to reference these parameters in the output if the values match.</p>
                                 <br />
                                 <table id="parameter-table" style="display: none;">
                                     <thead>
