Adds doc links for Resource Import widget

--- a/index.html
+++ b/index.html
@@ -527,14 +527,14 @@
                       <div class="modal-content">
                           <div class="modal-body">
                               <br />
-                              <h4 class="modal-title">Import into a CloudFormation Stack</h4>
+                              <h4 class="modal-title">Import into a CloudFormation Stack (<a href="https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resource-import.html" target="_blank">What is this?</a>)</h4>
                               <p>Enter the details below to create a CloudFormation Stack containing the selected resources.</p>
                               <fieldset class="form-group">
                                 <label class="form-label semibold" for="import-stackname">Stack Name</label>
                                 <input type="text" class="form-control" id="import-stackname" placeholder="MyStack" value="">
                               </fieldset>
                               <fieldset class="form-group">
-                                <label class="form-label semibold" for="import-deletionpolicy">Deletion Policy</label>
+                                <label class="form-label semibold" for="import-deletionpolicy">Deletion Policy (<a href="https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-attribute-deletionpolicy.html" target="_blank">What is this?</a>)</label>
                                 <select id="import-deletionpolicy" class="select2-arrow manual select2-no-search-arrow">
                                     <option value="Retain">Retain</option>
                                     <option value="Delete">Delete</option>
