--- a/index.html
+++ b/index.html
@@ -346,6 +346,7 @@
                             <li><a href="#section-managementandgovernance-opsworks"><span class="lbl">OpsWorks</span></a></li>
                             <li><a href="#section-managementandgovernance-servicecatalog"><span class="lbl">Service Catalog</span></a></li>
                             <li><a href="#section-managementandgovernance-systemsmanager"><span class="lbl">Systems Manager</span></a></li>
+                            <li><a href="#section-managementandgovernance-appconfig"><span class="lbl">AppConfig</span></a></li>
                             <li><a href="#section-managementandgovernance-licensemanager"><span class="lbl">License Manager</span></a></li>
                         </ul>
                     </li>
@@ -725,6 +726,7 @@
                                                     <a href="#section-managementandgovernance-opsworks" style="font-weight: 600;">OpsWorks</a><br />
                                                     <a href="#section-managementandgovernance-servicecatalog" style="font-weight: 600;">Service Catalog</a><br />
                                                     <a href="#section-managementandgovernance-systemsmanager" style="font-weight: 600;">Systems Manager</a><br />
+                                                    <a href="#section-managementandgovernance-appconfig" style="font-weight: 600;">AppConfig</a><br />
                                                     <a href="#section-managementandgovernance-licensemanager" style="font-weight: 600;">License Manager</a>
                                                 </td>
                                             </tr>
