--- a/index.html
+++ b/index.html
@@ -1373,6 +1373,7 @@
         <script src="js/services/cloudfront.js"></script>
         <script src="js/services/dynamodb.js"></script>
         <script src="js/services/kinesis.js"></script>
+        <script src="js/services/batch.js"></script>
         <script src="js/services/ecr.js"></script>
         <script src="js/services/eks.js"></script>
         <script src="js/services/ecs.js"></script>
@@ -1435,6 +1436,7 @@
         <script src="js/services/globalaccelerator.js"></script>
         <script src="js/services/iotthingsgraph.js"></script>
         <script src="js/services/organizations.js"></script>
+        <script src="js/services/securityhub.js"></script>
         <script src="js/services/amplify.js"></script>
         <script src="js/services/msk.js"></script>
         <script src="js/services/macie.js"></script>
