Add resource import template download only option #59

--- a/index.html
+++ b/index.html
@@ -541,6 +541,7 @@
                                     <option value="Delete">Delete</option>
                                 </select>
                               </fieldset>
+                              <small>You can also <a id="import-download-template" href="#section-outputs-cloudformation">download the template</a> only.</small>
                               <div id="import-warnings"></div>
                               <br />
                           </div>
