Alternate Logical ID prep

--- a/index.html
+++ b/index.html
@@ -1196,6 +1196,15 @@
                                         <option value="2">2 Spaces</option>
                                     </select>
                                 </div>
+                                <br />
+                                <div class="form-group">
+                                    <h5>Logical ID Strategy&nbsp;<div class="f2tooltip"><i class="fa fa-warning" style="color: #f29824;"></i><span class="f2tooltiptext">Experimental</span></div></h5>
+                                    <p>Change your preference for the naming of Logical IDs:</p>
+                                    <select id="logicalidstrategy" class="select2-arrow manual select2-no-search-arrow">
+                                        <option value="serviceprefixed">Service prefixed</option>
+                                        <option value="shorttypeprefixed">Short type prefixed</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="col-md-1"></div>
                             <div class="col-md-5">
@@ -1209,7 +1218,7 @@
                                 </div>
                                 <br />
                                 <div class="form-group">
-                                    <h5>Experimental Features&nbsp;<i class="fa fa-warning" style="color: #f29824;"></i></h5>
+                                    <h5>Add All Resources&nbsp;<div class="f2tooltip"><i class="fa fa-warning" style="color: #f29824;"></i><span class="f2tooltiptext">Experimental</span></div></h5>
                                     <p>Use the below button to add all scanned resources to the outputs (not recommended):</p>
                                     <button id="add-all-resources" class="btn btn-sm btn-secondary">
                                         <i class="font-icon font-icon-scanner"></i> Add All Resources
