Change default logical ID strategy

--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
                                         <option value="shorttypeprefixhashsuffix">Short type prefix + hash suffix</option>
                                         <option value="longtypeprefixhashsuffix">Long type prefix + hash suffix</option>
                                         <option value="shorttypeprefixoptionalindexsuffix">Short type prefix + optional index suffix</option>
-                                        <option value="longtypeprefixoptionalindexsuffix">Long type prefix + optional index suffix</option>
+                                        <option value="longtypeprefixoptionalindexsuffix" selected>Long type prefix + optional index suffix</option>
                                     </select>
                                 </div>
                             </div>
