New scan account button

--- a/index.html
+++ b/index.html
@@ -165,6 +165,11 @@
                                         <a class="dropdown-item region-item" data-region="us-gov-west-1">AWS GovCloud (US-Gov-West)</a>
                                     </div>
                                 </div>
+
+                                <button disabled class="btn btn-sm btn-success scan-account" style="margin-right: 10px; float: right; padding-top: 3px; margin-bottom: 8px;">
+                                    <i class="font-icon font-icon-scanner"></i> Scan Account
+                                </button>
+
                                 <div class="site-header-search-container">
                                     <form id="minisearch-form" class="site-header-search closed">
                                         <input id="minisearch-input" type="text" placeholder="Search"/>
@@ -1182,9 +1187,9 @@
                             <div class="col-md-4">
                                 <div class="form-group">
                                     <h5>Account Scanning</h5>
-                                    <p>Use the below button to pre-populate all categories by triggering a scan for the entire account:</p>
-                                    <button id="scan-account" class="btn btn-sm btn-success">
-                                        <i class="font-icon font-icon-scanner"></i> Scan Entire Account
+                                    <p>Use the below button to pre-populate all categories by triggering a scan for the account:</p>
+                                    <button disabled class="btn btn-sm btn-success scan-account">
+                                        <i class="font-icon font-icon-scanner"></i> Scan Account
                                     </button>
                                 </div>
                                 <br />
