Make search default to all rows

--- a/index.html
+++ b/index.html
@@ -1295,6 +1295,7 @@
                                 data-show-pagination-switch="true"
                                 data-pagination="true"
                                 data-id-field="id"
+                                data-page-size="All"
                                 data-page-list="[10, 25, 50, 100, ALL]"
                                 data-show-footer="false"
                                 data-response-handler="responseHandler">
