Added select all to Add Related Resource dialog

--- a/index.html
+++ b/index.html
@@ -520,6 +520,10 @@
                            </div>-->
                            <div class="modal-body">
                                <p>Would you like to add these related resources?</p>
+                               <div class="checkbox">
+                                    <input type="checkbox" id="add-related-selectall" class="related-check-all">
+                                    <label for="add-related-selectall">Select All</label>
+                                </div>
                                <div id="relatedresources"></div>
                            </div>
                            <div class="modal-footer">
