Ground Station mappings 🛰️

--- a/index.html
+++ b/index.html
@@ -338,6 +338,15 @@
                             <li><a href="#section-blockchain-managedblockchain"><span class="lbl">Managed Blockchain</span></a></li>
                         </ul>
                     </li>
+                    <li class="blue with-sub" data-category="blockchain">
+                        <span>
+                            <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Satellite_light-bg.png" style="width: 16px; height: 16px;" /></i>
+                            <span class="lbl">Satellite</span>
+                        </span>
+                        <ul>
+                            <li><a href="#section-satellite-groundstation"><span class="lbl">Ground Station</span></a></li>
+                        </ul>
+                    </li>
                     <li class="pink with-sub" data-category="managementandgovernance">
                         <span>
                             <i class="font-icon" style="left: 19px; top: 10px;"><img src="img/aws/Management-and-Governance_light-bg.png" style="width: 16px; height: 16px;" /></i>
@@ -695,8 +704,6 @@
                                                 </td>
                                             </tr>
                                         </table>
-                                    </div>
-                                    <div class="col-md-4">
                                         <table style="border: none; margin-bottom: 16px;">
                                             <tr>
                                                 <td><img src="img/aws/Robotics_light-bg.png" style="width: 48px; height: 48px;" /></td>
@@ -718,6 +725,20 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-blockchain-managedblockchain" style="font-weight: 600;">Managed Blockchain</a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <table style="border: none; margin-bottom: 16px;">
+                                            <tr>
+                                                <td><img src="img/aws/Satellite_light-bg.png" style="width: 48px; height: 48px;" /></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Satellite</h4></td>
+                                            </tr>
+                                            <tr>
+                                                <td>&nbsp;</td>
+                                                <td style="padding-left: 12px;">
+                                                    <a href="#section-satellite-groundstation" style="font-weight: 600;">Ground Station</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -818,6 +839,18 @@
                                     <div class="col-md-4">
                                         <table style="border: none; margin-bottom: 16px;">
                                             <tr>
+                                                <td><img src="img/aws/AWS-Cost-Management_light-bg.png" style="width: 48px; height: 48px;" /></td>
+                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">AWS Cost Management</h4></td>
+                                            </tr>
+                                            <tr>
+                                                <td>&nbsp;</td>
+                                                <td style="padding-left: 12px;">
+                                                    <a href="#section-awscostmanagement-budgets" style="font-weight: 600;">Budgets</a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <table style="border: none; margin-bottom: 16px;">
+                                            <tr>
                                                 <td><img src="img/aws/Mobile_light-bg.png" style="width: 48px; height: 48px;" /></td>
                                                 <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">Mobile</h4></td>
                                             </tr>
@@ -844,18 +877,6 @@
                                                     <a href="#section-applicationintegration-sns" style="font-weight: 600;">SNS</a><br />
                                                     <a href="#section-applicationintegration-sqs" style="font-weight: 600;">SQS</a><br />
                                                     <a href="#section-applicationintegration-swf" style="font-weight: 600;">SWF</a>
-                                                </td>
-                                            </tr>
-                                        </table>
-                                        <table style="border: none; margin-bottom: 16px;">
-                                            <tr>
-                                                <td><img src="img/aws/AWS-Cost-Management_light-bg.png" style="width: 48px; height: 48px;" /></td>
-                                                <td style="padding-left: 12px;"><h4 style="vertical-align: middle; margin-top: 6px; margin-bottom: 6px;">AWS Cost Management</h4></td>
-                                            </tr>
-                                            <tr>
-                                                <td>&nbsp;</td>
-                                                <td style="padding-left: 12px;">
-                                                    <a href="#section-awscostmanagement-budgets" style="font-weight: 600;">Budgets</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1482,6 +1503,7 @@
         <script src="js/services/storagegateway.js"></script>
         <script src="js/services/mediaconvert.js"></script>
         <script src="js/services/appconfig.js"></script>
+        <script src="js/services/groundstation.js"></script>
         
         <script src="js/app.js"></script>
     </body>
