Mask parameter name #69

--- a/index.html
+++ b/index.html
@@ -1403,6 +1403,8 @@
         <script src="js/lib/jquery-tag-editor/jquery.caret.min.js"></script>
         <script src="js/lib/jquery-tag-editor/jquery.tag-editor.min.js"></script>
 
+        <script src="js/lib/input-mask/jquery.mask.min.js"></script>
+
         <script src="js/ui-app.js"></script>
 
         <script src="js/deepmerge.js"></script>
