Added default output

--- a/index.html
+++ b/index.html
@@ -1239,6 +1239,17 @@
                                         <option value="longtypeprefixoptionalindexsuffix" selected>Long type prefix + optional index suffix</option>
                                     </select>
                                 </div>
+                                <br />
+                                <div class="form-group">
+                                    <h5>Default Output</h5>
+                                    <p>Change your preference for the default output language:</p>
+                                    <select id="defaultoutput" class="select2-arrow manual select2-no-search-arrow">
+                                        <option value="cloudformation">CloudFormation</option>
+                                        <option value="tf">Terraform</option>
+                                        <option value="troposphere">Troposphere</option>
+                                        <option value="cdkts">CDK (TS)</option>
+                                    </select>
+                                </div>
                             </div>
                             <div class="col-md-1"></div>
                             <div class="col-md-5">
