Added CodeGuru and Resource Groups

--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
                         </span>
                         <ul>
                             <li><a href="#section-machinelearning-sagemaker"><span class="lbl">SageMaker</span></a></li>
+                            <li><a href="#section-machinelearning-codeguru"><span class="lbl">CodeGuru</span></a></li>
                         </ul>
                     </li>
                     <li class="purple with-sub" data-category="analytics">
@@ -509,6 +510,7 @@
                             <span class="lbl">Other</span>
                         </span>
                         <ul>
+                            <li><a href="#section-other-resourcegroups"><span class="lbl">Resource Groups</span></a></li>
                             <li><a href="#section-other-servicequotas"><span class="lbl">Service Quotas</span></a></li>
                         </ul>
                     </li>
@@ -788,6 +790,7 @@
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
                                                     <a href="#section-machinelearning-sagemaker" style="font-weight: 600;">SageMaker</a><br />
+                                                    <a href="#section-machinelearning-codeguru" style="font-weight: 600;">CodeGuru</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -944,6 +947,7 @@
                                             <tr>
                                                 <td>&nbsp;</td>
                                                 <td style="padding-left: 12px;">
+                                                    <a href="#section-other-resourcegroups" style="font-weight: 600;">Resource Groups</a><br />
                                                     <a href="#section-other-servicequotas" style="font-weight: 600;">Service Quotas</a>
                                                 </td>
                                             </tr>
@@ -1530,6 +1534,8 @@
         <script src="js/services/mediaconvert.js"></script>
         <script src="js/services/appconfig.js"></script>
         <script src="js/services/groundstation.js"></script>
+        <script src="js/services/resourcegroups.js"></script>
+        <script src="js/services/codeguru.js"></script>
         
         <script src="js/app.js"></script>
     </body>
