Add Detective resources

--- a/index.html
+++ b/index.html
@@ -424,6 +424,7 @@
                             <li><a href="#section-securityidentityandcompliance-directoryservice"><span class="lbl">Directory Service</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-wafandshield"><span class="lbl">WAF &amp; Shield</span></a></li>
                             <li><a href="#section-securityidentityandcompliance-securityhub"><span class="lbl">Security Hub</span></a></li>
+                            <li><a href="#section-securityidentityandcompliance-detective"><span class="lbl">Detective</span></a></li>
                         </ul>
                     </li>
                     <li class="red with-sub" data-category="mobile">
@@ -834,7 +835,8 @@
                                                     <a href="#section-securityidentityandcompliance-cloudhsm" style="font-weight: 600;">CloudHSM</a><br />
                                                     <a href="#section-securityidentityandcompliance-directoryservice" style="font-weight: 600;">Directory Service</a><br />
                                                     <a href="#section-securityidentityandcompliance-wafandshield" style="font-weight: 600;">WAF &amp; Shield</a><br />
-                                                    <a href="#section-securityidentityandcompliance-securityhub" style="font-weight: 600;">Security Hub</a>
+                                                    <a href="#section-securityidentityandcompliance-securityhub" style="font-weight: 600;">Security Hub</a><br />
+                                                    <a href="#section-securityidentityandcompliance-detective" style="font-weight: 600;">Detective</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -1536,6 +1538,7 @@
         <script src="js/services/groundstation.js"></script>
         <script src="js/services/resourcegroups.js"></script>
         <script src="js/services/codeguru.js"></script>
+        <script src="js/services/detective.js"></script>
         
         <script src="js/app.js"></script>
     </body>
