--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                                         <a class="dropdown-item region-item" data-region="us-east-2">US East (Ohio)</a>
                                         <a class="dropdown-item region-item" data-region="us-west-1">US West (N. California)</a>
                                         <a class="dropdown-item region-item" data-region="us-west-2">US West (Oregon)</a>
+                                        <a class="dropdown-item region-item" data-region="af-south-1">Africa (Cape Town)</a>
                                         <a class="dropdown-item region-item" data-region="ap-east-1">Asia Pacific (Hong Kong)</a>
                                         <a class="dropdown-item region-item" data-region="ap-south-1">Asia Pacific (Mumbai)</a>
                                         <a class="dropdown-item region-item" data-region="ap-northeast-3">Asia Pacific (Osaka-Local)</a>
